--- a/templates/main.hbs
+++ b/templates/main.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>{{ title }} | Metalsmith Page</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <div class="main-wrapper">
