--- a/templates/main.hbs
+++ b/templates/main.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="css/driver.css">
 </head>
 <body>
     <div class="main-wrapper">
