Pre-Release Cleanup #1 - Added clearer instructions to the readme file - Added media queries to css files - Removed Build folder, added it to gitignore - Cleaned up .gitignore

--- a/src/scss/driver.scss
+++ b/src/scss/driver.scss
@@ -1,4 +1,14 @@
+/*==============================================================================*\
+	Driver Class
+	- Import other CSS files here
+\*==============================================================================*/
+
+/* Colours and other templates go here */
+
+/* Main page goes here */
 @import "main.scss";
-.text-class{
-	font-size: 20px;
-}
+
+/* Other pages fall in here */
+
+/* Media queries go here */
+@import "_media-queries.scss";
