Pre-Release Cleanup #2 - Added Metalsmith-copy-assets - Added Navbar partial - Restructured directories - Restructured css partials - Restructured imports - Installed different watcher - Added bootstrap - Slightly tweaked readme

--- a/src/scss/driver.scss
+++ b/src/scss/driver.scss
@@ -6,7 +6,7 @@
 /* Colours and other templates go here */
 
 /* Main page goes here */
-@import "main.scss";
+@import "_main.scss";
 
 /* Other pages fall in here */
 
