Changes to templates - Removed copy of readme file - Added navbar template, and some js that doesn't work yet

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,3 +1,7 @@
-h1{
-	color: red;
-}
+/*==============================================================================*\
+	Main CSS File
+	App Name:
+	Author:  
+	Version: 
+	Comments:
+\*==============================================================================*/
