--- a/templates/main.hbs
+++ b/templates/main.hbs
@@ -8,15 +8,13 @@
 </head>
 <body>
 	{{> navbar }}
-
-
-
-
-
     <div class="main-wrapper">
-        {{{ contents }}}
+        <div class="container text-center">
+            {{{ contents }}}
+        </div>
     </div>
     <script src="dependencies/jquery.min.js"></script>
     <script src="dependencies/bootstrap.min.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
