--- a/src/scss/driver.scss
+++ b/src/scss/driver.scss
@@ -4,7 +4,7 @@
 \*==============================================================================*/
 
 /* Colours and other templates go here */
-
+@import "_navbar.scss";
 /* Main page goes here */
 @import "_main.scss";
 
